Fixed errors with email signup
Changed all forms to async axios

--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,20 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "headers": [ {
+      "source": "**",
+      "headers": [ {
+        "key": "Access-Control-Allow-Origin",
+        "value": "*"
+      } ]
+    } ]
+  
+  },
+  "emulators": {
+      "hosting": {
+          "host": "localhost",
+          "port": "5005"
+      }
   }
 }
